--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -9,14 +9,16 @@ sites:
 status-website:
   baseUrl: /dsat-upptime
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  name: DSAT
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
+  name: DSAT / DISSM/INPE
+  introTitle: "**DSAT** is a web-based tool for interactive visualization of GOES-16 data and products received and processed by INPE."
   introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
   navbar:
     - title: Status
       href: /dsat-upptime
     - title: GitHub
       href: https://github.com/$OWNER/$REPO
+    - title: DSAT
+      href: https://www.cptec.inpe.br/dsat
 
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
