--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -12,7 +12,7 @@ status-website:
   theme: night
   name: DSAT | DISSM/INPE
   introTitle: "**DSAT** is a web-based tool for interactive visualization of GOES-16 data and products received and processed by INPE."
-  introMessage: This is a status page which uses **real-time** data from [GitHub repository](https://github.com/upptime/upptime).
+  introMessage: This is a status page which uses **real-time** data from [GitHub repository](https://github.com/dissm-inpe/dsat-upptime).
   navbar:
     - title: Status
       href: /dsat-upptime
