--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -8,7 +8,7 @@ sites:
 
 status-website:
   baseUrl: /dsat-upptime
-  logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
+  logoUrl: https://raw.githubusercontent.com/dissm-inpe/dsat-upptime/master/assets/dsat-icon.png
   theme: night
   name: DSAT | DISSM/INPE
   introTitle: "**DSAT** is a web-based tool for interactive visualization of GOES-16 data and products received and processed by INPE."
